# triage-voice-eval

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: award-questions.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/plans/: 2026-04-19-award-prep-backlog.md
examples/multi_persona/: README.md  run_eval.py
examples/openai_crisis/: run_eval.py
examples/shopco_eval/: README.md  run_eval.py  scenarios.yaml
integrations/skycarrier/: README.md  __init__.py  guards.py  pipeline.py  run_eval.py  scenarios.yaml
src/safety_eval/: __init__.py
src/safety_eval/core/: guard.py
src/triage_voice_eval/: __init__.py  cli.py  runner.py  usage_logger.py  usage_tracker.py
src/triage_voice_eval/core/: __init__.py  guard.py  models.py  verdicts.py
src/triage_voice_eval/guards/: __init__.py  crisis_guard.py  jailbreak_guard.py
src/triage_voice_eval/parsing/: __init__.py  robust_json.py
src/triage_voice_eval/reports/: __init__.py  _utils.py  case_report.py  persona_report.py  summary.py
src/triage_voice_eval/trend/: __init__.py  analyzer.py
tests/: test_cli.py  test_core_models.py  test_crisis_guard.py  test_jailbreak_guard.py  test_reports_error.py  test_robust_json.py  test_runner.py  test_skycarrier_guards.py  test_trend.py  test_usage_logger.py  test_usage_tracker.py
