[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-voice-eval"
version = "0.1.0"
description = "Binary safety guards, fan-out evaluation, and trend analysis for multi-step LLM pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "svetkis" },
]
keywords = [
    "llm",
    "evaluation",
    "eval",
    "safety",
    "guardrails",
    "jailbreak",
    "prompt-injection",
    "crisis-detection",
    "guards",
    "testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
tve = "triage_voice_eval.cli:main"

[project.urls]
# TODO: replace <owner>/<repo> if repo is renamed after publishing
Homepage   = "https://github.com/svetkis/triage-voice-eval"
Repository = "https://github.com/svetkis/triage-voice-eval"
Issues     = "https://github.com/svetkis/triage-voice-eval/issues"
Changelog  = "https://github.com/svetkis/triage-voice-eval/blob/main/CHANGELOG.md"

[project.optional-dependencies]
examples = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
